--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --open  --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "AlokD",
   "license": "ISC",
   "dependencies": {
+    "less-loader": "^11.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,8 +20,21 @@
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@storybook/addon-essentials": "^7.4.5",
+    "@storybook/addon-interactions": "^7.4.5",
+    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.5",
+    "@storybook/react": "^7.4.5",
+    "@storybook/react-webpack5": "^7.4.5",
+    "@storybook/testing-library": "^0.2.1",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "sass": "^1.69.4",
+    "sass-loader": "^13.3.2",
+    "storybook": "^7.4.5",
+    "style-loader": "^3.3.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
